--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -21,3 +21,17 @@ I'm Lorenz (not Lawrence), a character rigger, technical animator/artist at work
 a cat dad, DIY enthusiast, rock climber, boardgamer, sim racer outside of work. 
 
 Welcome to my portfolio and documentation.
+
+::::info
+
+Picking up one programming launaguge helps me picking up other programming launaguges.
+Documentations, Stack Overflow, GitHub codes, and YouTube are my best friends when I learn new stuff.
+Making my own documentation ensures I understand the concepts and allows me to look them up later.
+
+:::note
+
+Organizing thoughts takes time, but I’m definitely updating the site slowly
+
+:::
+
+::::
