Update split keyboard page and style.

--- a/docs/diy-projects/arcade-stick.mdx
+++ b/docs/diy-projects/arcade-stick.mdx
@@ -3,10 +3,11 @@ sidebar_position: 1
 title: "Arcade Stick"
 description: "A guide to build a custom arcade stick by using RP2040 microcontroller and GP2040-CE firmware."
 tags:
+  - "RP2040"
   - "GP2040-CE"
 ---
 
-:::danger
+:::danger You know what?
 
 This page is coming soon<sup>TM</sup>...
 
@@ -14,4 +15,14 @@ This page is coming soon<sup>TM</sup>...
 
 ## Overview
 
-Building an arcade stick to replace the HORI Real Arcade Pro 4 Kai that I got many years ago. The buttons on the HIRO stick are very spread out and my fingers get tired easily.
+Building an arcade stick to replace the HORI Real Arcade Pro 4 Kai that I got many years ago. The buttons on the HIRO stick are very spread out so my fingers get tired easily.
+Here is how I build a custom arcade stick by using RP2040 microcontroller and GP2040-CE firmware.
+
+### Final product
+
+![Front](/img/diy-projects/arcade-stick/front.jpg)
+![Back](/img/diy-projects/arcade-stick/back.jpg)
+
+### Side by side
+
+![Side by side](/img/diy-projects/arcade-stick/side-by-side.jpg)
