--- a/docs/diy-projects/miniature-painting.mdx
+++ b/docs/diy-projects/miniature-painting.mdx
@@ -4,9 +4,10 @@ title: "Miniature Painting"
 description: "A guide to fast paint minis by using the slapchop technique."
 tags:
   - "slapchop"
+  - "dry-brush"
 ---
 
-:::danger
+:::danger You know what?
 
 This page is coming soon<sup>TM</sup>...
 
