--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -25,12 +25,12 @@ Welcome to my portfolio and documentation.
 ::::info
 
 Picking up one programming launaguge helps me picking up other programming launaguges.
-Documentations, Stack Overflow, GitHub codes, and YouTube are my best friends when I learn new stuff.
+Documentations, Stack Overflow, GitHub code, and YouTube are my best friends when I learn new stuff.
 Making my own documentation ensures I understand the concepts and allows me to look them up later.
 
 :::note
 
-Organizing thoughts takes time, but I’m definitely updating the site slowly
+Organizing thoughts and steps takes time, but I’m definitely updating the site slowly.
 
 :::
 
