--- a/docs/diy-projects/split-keyboard.mdx
+++ b/docs/diy-projects/split-keyboard.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 title: "Split Keyboard"
 description: "A guide to build a manuform split keyboard by using RP2040 microcontroller and QMK firmware."
 tags:
+  - "RP2040"
   - "qmk"
   - "vial-kb"
   - "dactyl-manuform"
@@ -18,16 +19,26 @@ This page is under construction...
 ## Overview
 
 Building a split keyboard for work so I can move the Kinesis Advantage2 to the PC. I prefer 80%-100% keyboard but Kinesis Advantage360 Professional is too pricy.
+Here is how I build a manuform split keyboard by using RP2040 microcontroller and QMK firmware.
+
+### Final product
+
+![Front](/img/diy-projects/split-keyboard/front.jpg)
+![Back](/img/diy-projects/split-keyboard/back.jpg)
+
+### Side by side
+
+![Side by side](/img/diy-projects/split-keyboard/side-by-side.jpg)
 
 ## Tools
 
 | Item | Notes |
 | :- | :- |
-| 3D printer | Print the cases |
+| 3D Printer | Print the cases |
 | Multimeter | Test connections |
-| Soldering kit |  |
-| Wire stripper | Make dupont connectors |
-| Crimping tool kit | Same as above |
+| Soldering Kit |  |
+| Wire Stripper | Make dupont connectors |
+| Crimping Tool Kit | Same as above |
 | Jewelry Plier | Bend the diodes |
 | Hot Glue | Hold stuff in place |
 | Isopropyl Alcohol | >70%, undo the hot glue |
@@ -39,13 +50,13 @@ Building a split keyboard for work so I can move the Kinesis Advantage2 to the P
 | Item | QTY | Notes |
 | :- | :-: | :- |
 | Cases | 2 |  |
-| Microcontrollers | 2 | **Adafruit KB2040**, Raspberry Pi Pico RP2040, or Arduino Pro Micro |
+| Microcontrollers | 2 | **Adafruit KB2040**, Raspberry Pi Pico RP2040 |
 | Purple Squishies | 2 | Wrist rest |
-| PJ-320A TRRS connector | 2 | Connect two halves |
-| TRRS Cable  | 1 | **UGREEN** seems fine |
+| PJ-320A TRRS Connectors | 2 | Connect two halves |
+| TRRS Cable | 1 | **UGREEN** seems fine |
 | Type C Cable | 1 | Same as above |
-| Keyboard switch | 88 | **Cherry MX Silent Red** or other MX-Compatible switches |
-| Keycap | 88 | **DSA profile** or any uniform profiles are recommended |
+| Keyboard Switches | 88 | **Cherry MX Silent Red** or other MX-Compatible switches |
+| Keycaps | 88 | **DSA profile** or any uniform profiles are recommended |
 | 1N4148 Diodes | 88 | Get some extra just in case | 
 | 24 Gauge Stranded Wire | - | Colored would be helpful |
 | Dupont 2.54mm Connector Kit | - |  |
@@ -58,12 +69,32 @@ Building a split keyboard for work so I can move the Kinesis Advantage2 to the P
 ### Make & Print Cases
 
 I used [Cosmos Keyboard Generator](https://ryanis.cool/cosmos/beta#cf) and edit it in Houdini.
+The generator is in beta when I use it. It might take some time to achieve a nice-looking shape without any intersections.
+
+![Cosmos settings](/img/diy-projects/split-keyboard/cosmos_settings.png)
+I settled down with these settings, 6 keys on the thumb cluster like the Advantage2, extra row on top for function keys, extra coloumn for the index.
+
+I combined the microcontroller holder with the base plate to create a stronger structure.
+Instead of using the wrist rest from the generator, I modeled a riser for the Purple Squishy that came with the mattress.
 
 ### Wire Everything
 
-It took me 10 hours in total since I'm not good at soldering. I solder things better and faster after this.
+It took me about 10 hours in total because I’m not good at soldering, but I got better and faster at it afterward.
 
-#### Plan Matrix
+#### Plan Matrix and Pins
+
+I can plan the matrix however I want within the limited pinout on the microcontroller.
+A well-thought-out matrix can make my life easier when it comes to soldering and debugging.
+
+Let's look at the pins on the board I'm using. The KB2040 is an Arduino Pro Micro-shaped Pi Pico with a Type C connector, a reset button, and a bootloader button.
+
+![KB2040 pinout](/img/diy-projects/split-keyboard/KB2040_pinout.png)
+
+I decide to use USART Full-duplex[^1] driver for the split keyboard, which requires an I<sup>2</sup>C connection [^2].
+Since the TRRS connectors are next to the board, it makes sense to use the `GPIO0` and `GPIO1` for the `TX` and `RX`.
+
+Well, we have 16 pins left. Technically, I can do a 8x8 for each side with this board, which would be 128 keys total!
+That’s too many keys for a split keyboard and too many keys to solder. Based on my 3d printed case, I can fit 44 keys in a 7x7 matrix per side.
 
 #### Bend Diodes
 
@@ -82,3 +113,10 @@ Hardware is done, it's time for the software.
 #### Flash it
 
 #### Add Vial QMK
+
+<br/>
+
+---
+
+[^1]: ['serial' Driver | QMK Firmware](https://docs.qmk.fm/drivers/serial#usart-full-duplex)
+[^2]: [Split Keyboard | QMK Firmware](https://docs.qmk.fm/features/split_keyboard#i2c-wiring)
