Update split keyboard page

--- a/docs/diy-projects/arcade-stick.mdx
+++ b/docs/diy-projects/arcade-stick.mdx
@@ -23,6 +23,6 @@ Here is how I build a custom arcade stick by using RP2040 microcontroller and GP
 ![Front](/img/diy-projects/arcade-stick/front.jpg)
 ![Back](/img/diy-projects/arcade-stick/back.jpg)
 
-### Side by side
+### Side by Side
 
-![Side by side](/img/diy-projects/arcade-stick/side-by-side.jpg)
+![Side by Side](/img/diy-projects/arcade-stick/side-by-side.jpg)
