Update index page

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,13 +7,9 @@ description: "Lorenz's portfolio and documentation website. He is a character ri
 
 import {VimeoIFrame} from "../src/components/rsp-frame"
 
-## Rigging Reel 2021
+## Demo Reel
 
 <VimeoIFrame id={"512840046"} />
-
-## MoCap Reel 2018
-
-<VimeoIFrame id={"289171150"} />
 
 ## About
 
