Finish split keyboard page

--- a/docs/diy-projects/arcade-stick.mdx
+++ b/docs/diy-projects/arcade-stick.mdx
@@ -18,7 +18,7 @@ This page is coming soon<sup>TM</sup>...
 Building an arcade stick to replace the HORI Real Arcade Pro 4 Kai that I got many years ago. The buttons on the HIRO stick are very spread out so my fingers get tired easily.
 Here is how I build a custom arcade stick by using RP2040 microcontroller and GP2040-CE firmware.
 
-### Final product
+### Final Product
 
 ![Front](/img/diy-projects/arcade-stick/front.jpg)
 ![Back](/img/diy-projects/arcade-stick/back.jpg)
